[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["HamzhSuilik <9hamzh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
nltk = "^3.6.2"

[tool.poetry.dev-dependencies]

black = {version = "^21.5b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
